--- a/index.css
+++ b/index.css
@@ -1,17 +1,14 @@
 body {
-    background-image: url("yarn.jpeg");
-    background-size: cover;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Verdana (sans-serif);
+    font-weight: bold;
     text-align: center;
-    height: 100vh;
-}
-
-.container {
-    background: white;
-    max-width: 80%;
-    margin: auto;
-    border: 3px solid black;
-    border-radius: 10px;
+    background-color: #e5e5f7;
+  width: 100%; /* Assurez-vous que la div prenne toute la largeur */
+  height: 100vh; /* Ajustez la hauteur pour qu'elle prenne toute la hauteur de la vue */
+  background-color: #e5e5f7;
+  background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #e5e5f7 10px), repeating-linear-gradient(#f7457055, #f74570);
+  background-repeat: no-repeat;
+  background-size: cover; /* Ou "contain" selon le besoin */
 }
 
 h1 {
@@ -26,7 +23,7 @@ h2 {
 }
 
 button {
-    border: 1px solid black;
+    border: none;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
@@ -37,14 +34,25 @@ button {
 }
 
 #increment-btn {
-    background: #2C2891;
+    background: #db3351;
 }
 
 #save-btn {
-    background: #1C7947;
+    background: #32db8a;
 }
 
-#save-el {
-    font-weight: bold;
+
+@media (min-width: 1024px) {
+  #responsive {
+    padding: 40px;
+    font-size: 20px;
+  }
 }
 
+/* Styles pour les petits écrans (largeur inférieure à 768px) */
+@media (max-width: 768px) {
+  #responsive {
+    padding: 10px;
+    font-size: 14px;
+  }
+}
